src/Components/ReviewItem/ReviewItem.css
.review-item {
    border: 1px solid #95A0A7;
    border-radius: 8px;
    padding: 8px;
    margin-top: 21px;
    width: 571px;
    height: 107px;
    display: flex;
}

.review-item img {
    width: 91px;
}

.review-item-details-container {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.review-item-details p {
    margin: 0;
}

.review-item .delete-container {
    display: flex;
    align-items: center;
}

.review-item .delete-button {
    background-color: rgba(239, 101, 101, 0.3);
    width: 55px;
    height: 55px;
    border: none;
    border-radius: 50%;
    cursor: pointer;
}

.review-item .delete-button:hover {
    background-color: rgba(251, 135, 135, 0.3);
}

.delete-icon {
    color: #EB5757;
    font-size: 27px;
}

